# MyPom

./: .env  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
MyPom/: app.py
MyPom/core/: config.py  database.py  security.py  setting.py
MyPom/routers/: options.py  page.py  pomo.py  token.py  user.py
MyPom/schemas/: options_schema.py  pomo_schema.py  user_schema.py
MyPom/static/css/: config-style.css  foco-time.css  login-style.css  nav-bar.css  report-style.css  weekly_dashboard.css
MyPom/static/js/: focus.js  login.js  options.js  register.js  report.js
MyPom/templates/: home.html  index.html  login.html  options.html  register.html  report.html
alembic/: env.py
alembic/versions/: 354779cab165_ajusta_tabela_users_adcionando_compo_.py  4b073a17218a_segunda_revisao.py  6189e513ea25_adiciona_tabela_pomo.py  94dd7aafffd2_primeira_revisão.py  ce7a17731647_adiciona_o_campo_project_a_tabela_.py  cea0c6259941_atualiza_tabela_pomo_criando_um_.py  dc98e58e5b19_ajusta_tabela_users_removendo_linha_.py
tests/: conftest.py  test_pomo.py  test_users.py
