[project]
name = "mypom"
version = "0.1.0"
description = ""
authors = [
    {name = "TheNullP",email = "mfreitasc0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "mypom", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
