[project]
name = "mypom"
version = "0.1.0"
description = ""
authors = [
    {name = "TheNullP",email = "mfreitasc0@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mypom", from = "src"}]


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
# run = 'fastapi dev MyPom/app.py --no-reload --host 0.0.0.0 --port 8080'
run = 'uvicorn MyPom.app:app --reload --host 0.0.0.0 --port 8080'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
