[tool.poetry]
name = "mypom"                                 
version = "0.1.0"                              
description = ""                               
authors = ["TheNullP <mfreitasc0@gmail.com>"]  
license = "MIT"                                
readme = "README.md"                           
packages = [{include = "MyPom", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"                               
fastapi = {extras = ["standard"], version = ">=0.115.14,<0.116.0"} 
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg = ">=3.2.9,<4.0.0"
alembic = ">=1.17.2,<2.0.0"
pytest = ">=9.0.1,<10.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.21"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run = 'uvicorn MyPom.app:app --reload --host 0.0.0.0 --port 8080'
test = "pytest -s -x -vv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

